manifests/xray/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xray
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xray
  template:
    metadata:
      labels:
        app: xray
    spec:
      containers:
        - name: xray
          image: ghcr.io/xtls/xray-core:26.2.6
          ports:
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/xray/config.json
              subPath: config.json
      volumes:
        - name: config
          secret:
            secretName: xray
