manifests/xray/ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: xray
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`www.microsoft.com`)
      services:
        - name: xray
          port: 443
  tls:
    passthrough: true
